# langraph-code-examples

./: .gitignore  README.md
langgraph-mcp/.github/: copilot-instructions.md
langgraph-mcp/agent/: README.md  pyproject.toml
langgraph-mcp/agent/src/agent/: graph.py
langgraph-mcp/agent/src/deep_agent/: graph.py  prompts.py  tools.py
langgraph-mcp/agent/tests/integration_tests/: test_graph.py
langgraph-mcp/agents/: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
langgraph-mcp/agents/src/agent/: graph.py
langgraph-mcp/agents/src/deep_agent/: __init__.py  graph.py
langgraph-mcp/agents/src/deep_agent_with_skills/: __init__.py  graph.py  prompts.py
langgraph-mcp/agents/src/deep_agent_with_skills/skills/poem-explainer/: SKILL.md
langgraph-mcp/agents/src/deep_agent_with_skills/skills/poem-explainer/assets/: template.md
langgraph-mcp/mcp-server/: README.md  pyproject.toml
langgraph-mcp/mcp-server/src/langgraph_mcp_server/: __init__.py  server.py
my-chat-ui/: README.md  pnpm-lock.yaml
my-chat-ui-deep-agent/: README.md  pnpm-lock.yaml
my-chat-ui-deep-agent/apps/web/: package.json
my-chat-ui-deep-agent/apps/web/src/app/: page.tsx
my-chat-ui-deep-agent/apps/web/src/components/: Loading.tsx  MessageBubble.tsx  MessageInput.tsx  States.tsx
my-chat-ui-deep-agent/apps/web/src/components/thread/messages/: tool-calls.tsx
my-chat-ui-deep-agent/apps/web/src/examples/deepagent-tools/: agent.ts  index.tsx  types.ts
my-chat-ui-deep-agent/apps/web/src/examples/deepagent-tools/components/: SubagentPipeline.tsx  SubagentStreamCard.tsx  (+1 more)
(+1 files in other folders)
