[project]
name = "langgraph-mcp-server"
version = "0.1.0"
description = "FastMCP server for LangGraph integration"
requires-python = ">=3.10"
dependencies = [
    "fastmcp==2.14.5",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "langgraph==1.0.8",
    "langchain>=0.1.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_mcp_server"]
